# Bard-rs

./: .env  .env_sample  Cargo.toml  LICENSE  README.md  bard_hello_bard.md
src/: gpt_bard.rs  main.rs
