[package]
name = "bard-rs"
version = "1.2.0"
edition = "2021"
authors = ["Seok Won Choi <ikr@kakao.com>"]
description = "Google Bard CLI"
license = "MIT"
repository = "https://github.com/Alfex4936/Bard-rs"
keywords = ["Google", "Bard", "CLI"]

[dependencies]
async-openai = "0.11"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15.0"
flate2 = "1.0"
rand = "0.8"
regex = "1.8"
colored = "2.0"
reqwest = { version = "0.11", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2"
urlencoding = "2"
rustyline = { version = "11.0.0", features = ["derive"] }
indicatif = { version = "0.17", features = ["improved_unicode"] }
chrono = "0.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
